feat: put routes add equivalent patch routes
